Fix event index spacing and color

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1080,5 +1080,5 @@ h1.create-event-form-type{
     }
 
     .blue {
-        color: blue
+        color: navy
     }
